tests/ui/mismatched_types/non_zero_coerce_fail.stderr
error[E0599]: no method named `foo` found for struct `NonZero` in the current scope
  --> $DIR/non_zero_coerce_fail.rs:15:7
   |
LL |     x.foo();
   |       ^^^ method not found in `NonZero<u8>`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `Foo` defines an item `foo`, perhaps you need to implement it
  --> $DIR/non_zero_coerce_fail.rs:3:1
   |
LL | trait Foo: Sized {
   | ^^^^^^^^^^^^^^^^

error[E0599]: no method named `bar` found for struct `NonZero` in the current scope
  --> $DIR/non_zero_coerce_fail.rs:17:7
   |
LL |     x.bar();
   |       ^^^ method not found in `NonZero<u8>`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `Foo` defines an item `bar`, perhaps you need to implement it
  --> $DIR/non_zero_coerce_fail.rs:3:1
   |
LL | trait Foo: Sized {
   | ^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `NonZero<u8>: Foo` is not satisfied
  --> $DIR/non_zero_coerce_fail.rs:19:9
   |
LL |     foo(x);
   |     --- ^ the trait `Foo` is not implemented for `NonZero<u8>`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the following other types implement trait `Foo`:
             u16
             u8
note: required by a bound in `foo`
  --> $DIR/non_zero_coerce_fail.rs:11:16
   |
LL | fn foo(_: impl Foo) {}
   |                ^^^ required by this bound in `foo`

error[E0599]: no method named `foo` found for struct `NonZero` in the current scope
  --> $DIR/non_zero_coerce_fail.rs:24:7
   |
LL |     a.foo();
   |       ^^^ method not found in `NonZero<{integer}>`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `Foo` defines an item `foo`, perhaps you need to implement it
  --> $DIR/non_zero_coerce_fail.rs:3:1
   |
LL | trait Foo: Sized {
   | ^^^^^^^^^^^^^^^^

error[E0599]: no method named `bar` found for struct `NonZero` in the current scope
  --> $DIR/non_zero_coerce_fail.rs:26:7
   |
LL |     a.bar();
   |       ^^^ method not found in `NonZero<{integer}>`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `Foo` defines an item `bar`, perhaps you need to implement it
  --> $DIR/non_zero_coerce_fail.rs:3:1
   |
LL | trait Foo: Sized {
   | ^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `NonZero<{integer}>: Foo` is not satisfied
  --> $DIR/non_zero_coerce_fail.rs:28:9
   |
LL |     foo(a);
   |     --- ^ the trait `Foo` is not implemented for `NonZero<{integer}>`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the following other types implement trait `Foo`:
             u16
             u8
note: required by a bound in `foo`
  --> $DIR/non_zero_coerce_fail.rs:11:16
   |
LL | fn foo(_: impl Foo) {}
   |                ^^^ required by this bound in `foo`

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0277, E0599.
For more information about an error, try `rustc --explain E0277`.
